# my_moveit_pkg

./: package.xml  setup.cfg  setup.py
launch/: ur5_arm_test.launch.py
my_moveit_pkg/: publisher_testing.py  ur5_arm_test.py  ur5_arm_test_copy.py
