<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_moveit_pkg</name>
  <version>2.35.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lyndi_cloutier@student.uml.edu">csrobot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ur5_arm_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
